Adding OPODIS 2022 paper

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1832,6 +1832,11 @@ in Computer Science 5905, pages 132&#8211;147.
 <p><b><i><a name="OPODIS">International Conference on Principles
 of Distributed Systems (OPODIS)</a></i></b>
 <table border=0 cellpadding=3>
+<tr valign=top><td>2022</td>
+<td><b><a href="./2022/OPODIS.pdf">Communication-efficient BFT using small trusted hardware to tolerate minority corruption</a></b>
+<br>S. Yandamuri, I. Abraham, K. Nayak, and M. K. Reiter. Leibniz International Proceedings in Informatics (LIPIcs) 253.  <font size="-1"><a href="https://doi.org/10.4230/LIPIcs.OPODIS.2022.24">doi:10.4230/LIPIcs.OPODIS.2022.24</a></font>
+</td></tr>
+
 <tr valign=top><td>2008</td>
 <td><b><a href="./2008/OPODIS.pdf">Write markers for probabilistic quorum systems</a></b>
 <br>M. G. Merideth and M. K. Reiter.  Lecture Notes in
