--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -113,7 +113,13 @@ be reposted without the explicit permission of the copyright holder.
 Cryptography and Data Security</i>, May 2023.
 </li>
 
-<li><b><a name="2022"><a href="./2022/CCS.pdf">ENGRAFT: Enclave-guarded Raft on Byzantine faulty nodes</a></a></b>
+<li><b><a name="2022"><a href="./2022/OPODIS.pdf">Communication-efficient BFT
+using small trusted hardware to tolerate minority corruption</a></a></b>
+<br>S. Yandamuri, I. Abraham, K. Nayak, and M. K. Reiter
+<br>In <i>Proceedings of the 26th International Conference on Principles of Distributed Systems</i>, December 2022. <font size="-1"><a href="https://doi.org/10.4230/LIPIcs.OPODIS.2022.24">doi:10.4230/LIPIcs.OPODIS.2022.24</a></font>
+</li>
+
+<li><b><a href="./2022/CCS.pdf">ENGRAFT: Enclave-guarded Raft on Byzantine faulty nodes</a></b>
 <br>W. Wang, S. Deng, J. Niu, M. K. Reiter, and Y. Zhang
 <br>In <i>Proceedings of the 29th ACM Conference on Computer and Communications Security</i>, November 2022. <font size="-1"><a href="https://doi.org/10.1145/3548606.3560639">doi:10.1145/3548606.3560639</a></font>
 </li>
@@ -147,7 +153,7 @@ Representations</i>, April 2022.
 <li><b><a href="./2021/DISC.pdf">Brief announcement: Communication-efficient
 BFT using small trusted hardware to tolerate minority corruption</a></b>
 <br>S. Yandamuri, I. Abraham, K. Nayak, and M. Reiter
-<br><i>Proceedings of the 35th International Symposium on Distributed Computing</i>, October 2021.
+<br>In <i>Proceedings of the 35th International Symposium on Distributed Computing</i>, October 2021.
 <font size="-1"><a href="https://doi.org/10.4230/LIPIcs.DISC.2021.62">doi:10.4230/LIPIcs.DISC.2021.62</a></font>
 </li>
   
