Added a Euro S and P paper

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -92,6 +92,7 @@ be reposted without the explicit permission of the copyright holder.
 <a href="#ACM_EC">EC (ACM)</a>
 <br><a href="#USENIX_EC">EC (Usenix)</a>
 <br><a href="#ESORICS">ESORICS</a>
+<br><a href="#EuroSandP">Euro S&amp;P</a>
 <br><a href="#EUROCRYPT">EUROCRYPT</a>
 <br><a href="#EuroSys">EuroSys</a>
 </font></td>
@@ -1101,6 +1102,17 @@ href="http://dx.doi.org/10.1109/CSFW.1996.503686">doi:10.1109/CSFW.1996.503686</
 version</a>.
 </td></tr>
 </table></p>
+
+<hr>
+
+<p><b><i><a name="EuroSandP">IEEE European Symposium on Security and Privacy (Euro S&amp;P)</a></i></b>
+<table border=0 cellpadding=3>
+<tr valign=top><td>2023</td>
+<td><b>Privately evaluating region overlaps with applications to collaborative sensor output validation</b>
+<br>A. Chakraborti and M. K. Reiter.
+<font size="-1">&copy;IEEE</font>
+</td></tr>
+</table></p>  
 
 <hr>
 
