--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -102,6 +102,11 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 36th IEEE Computer Security Foundations Symposium</i>, July 2023.
 </li>
 
+<li><b>Privately evaluating region overlaps with applications to collaborative sensor output validation</b>
+<br>A. Chakraborti and M. K. Reiter
+<br>In <i>Proceedings of the 8th IEEE European Symposium on Security and Privacy</i>, July 2023.
+</li>
+
 <li><b>Nimble: Fast and safe migration of network functions</b>
 <br>S. Liu, M. K. Reiter, and T. A. Benson
 <br>In <i>Proceedings of the 42nd IEEE International Conference on Computer Communications</i>, May 2023.
