--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1750,7 +1750,7 @@ Cryptography and Data Security (FC)</a></i></b>
 <table border=0 cellpadding=3>
 
 <tr valign=top><td>2023</td>
-<td><b>The unique chain rule and its applications</b>
+<td><b><a href="./2023/FC.pdf">The unique chain rule and its applications</a></b>
 <br>A. Bhat, A. Bandarupalli, S. Bagchi, A. Kate, and M. K. Reiter.
 </td></tr>
   
