--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -112,7 +112,7 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 42nd IEEE International Conference on Computer Communications</i>, May 2023.
 </li>
 
-<li><b>The unique chain rule and its applications</b>
+<li><b><a href="./2023/FC.pdf">The unique chain rule and its applications</a></b>
 <br>A. Bhat, A. Bandarupalli, S. Bagchi, A. Kate, and M. K. Reiter
 <br>In <i>Proceedings of the 27th International Conference on Financial
 Cryptography and Data Security</i>, May 2023.
