--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -107,9 +107,9 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 8th IEEE European Symposium on Security and Privacy</i>, July 2023.
 </li>
 
-<li><b>Nimble: Fast and safe migration of network functions</b>
+<li><b><a href="./2023/INFOCOM.pdf">Nimble: Fast and safe migration of network functions</a></b>
 <br>S. Liu, M. K. Reiter, and T. A. Benson
-<br>In <i>Proceedings of the 42nd IEEE International Conference on Computer Communications</i>, May 2023.
+<br>In <i>Proceedings of the 42nd IEEE International Conference on Computer Communications</i>, May 2023.  <font size="-1">&copy;IEEE</font>
 </li>
 
 <li><b><a href="./2023/FC.pdf">The unique chain rule and its applications</a></b>
