Added NDSS 2024 paper

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2039,6 +2039,11 @@ a minimalist approach for network flow monitoring</a></b>
 <p><b><i><a name="NDSS">Internet Society Network and Distributed
 System Security Symposium (NDSS)</a></i></b>
 <table border=0 cellpadding=3>
+<tr valign=top><td>2024</td>
+<td><b>Bernoulli honeywords</b>
+<br>K. C. Wang and M. K. Reiter    
+</td></tr>
+
 <tr valign=top><td>2021</td>
 <td><b><a href="./2021/NDSS.pdf">TASE: Reducing latency of symbolic execution with transactional memory</a></b>
 <br>A. Humphries, K. Cating-Subramanian, and M. K. Reiter.
