--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -77,6 +77,7 @@ be reposted without the explicit permission of the copyright holder.
       <td><a href="#2021">2021</a></td>
       <td><a href="#2022">2022</a></td>
       <td><a href="#2023">2023</a></td>
+      <td><a href="#2024">2024</a></td>
     </tr>
   </table>
 </p>
@@ -86,7 +87,11 @@ be reposted without the explicit permission of the copyright holder.
 <hr>
 
 <ul>
-
+<li><b><a name="2024">Bernoulli honeywords</a></b>
+<br>K. C. Wang and M. K. Reiter
+<br>In <i>Proceedings of the 31st ISOC Network and Distributed System Security Symposium</i>, February 2024.
+</li>
+  
 <li><b><a name="2023">Distance-aware private set intersection</a></b>
 <br>A. Chakraborti, G. Fanti, and M. K. Reiter
 <br>In <i>Proceedings of the 32nd USENIX Security Symposium</i>, August 2023.
@@ -132,6 +137,7 @@ using small trusted hardware to tolerate minority corruption</a></a></b>
 <li><b><a href="./2022/ICML.pdf">Constrained gradient descent: A powerful and principled evasion attack against neural networks</a></b>
 <br>W. Lin, K. Lucas, L. Bauer, M. K. Reiter, and M. Sharif
 <br>In <i>Proceedings of the 39th International Conference on Machine Learning</i>, July 2022.
+<br>Notes: An <a href="https://github.com/linweiran/CGD">example implementation</a> is available.
 </li>
   
 <li><b><a href="./2022/ICLR.pdf">Practical integration via separable bijective networks</a></b>
