Updated pubs list

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -34,23 +34,24 @@ be reposted without the explicit permission of the copyright holder.
 <p>
 <table>
 <tr align="center" valign="top">
-<th width="5.8%">A</th>
-<th width="5.8%">C</th>
-<th width="5.8%">D</th>
-<th width="5.8%">E</th>
-<th width="5.8%">F</th>
-<th width="5.8%">H</th>
-<th width="5.8%">I</th>
-<th width="5.8%">J</th>
-<th width="5.8%">L</th>
-<th width="5.8%">N</th>
-<th width="5.8%">O</th>
-<th width="5.8%">P</th>
-<th width="5.8%">R</th>
-<th width="5.8%">S</th>
-<th width="5.8%">T</th>
-<th width="5.8%">U</th>
-<th width="5.8%">W</th>
+<th width="5.5%">A</th>
+<th width="5.5%">C</th>
+<th width="5.5%">D</th>
+<th width="5.5%">E</th>
+<th width="5.5%">F</th>
+<th width="5.5%">H</th>
+<th width="5.5%">I</th>
+<th width="5.5%">J</th>
+<th width="5.5%">L</th>
+<th width="5.5%">M</th>
+<th width="5.5%">N</th>
+<th width="5.5%">O</th>
+<th width="5.5%">P</th>
+<th width="5.5%">R</th>
+<th width="5.5%">S</th>
+<th width="5.5%">T</th>
+<th width="5.5%">U</th>
+<th width="5.5%">W</th>
 </tr>
 
 <tr align="center" valign="top">
@@ -132,6 +133,10 @@ be reposted without the explicit permission of the copyright holder.
 
 <td><font size="-1">
 <a href="#LASER">LASER</a>
+</font></td>
+
+<td><font size="-1">
+<a href="#MIDDLEWARE">Middleware</a>
 </font></td>
 
 <td><font size="-1">
@@ -2153,6 +2158,16 @@ secure reliable multicast protocol</a></a></b>
 <br>K. Vaniea, L. Bauer, L. F. Cranor and M. K. Reiter.  Pages 31&#8211;40. 
 <font size="-1"><a
 href="http://dx.doi.org/10.1145/2379616.2379621">doi:10.1145/2379616.2379621</a> &nbsp; &copy;ACM</font>
+</td></tr>
+</table></p>
+
+<hr>
+
+<p><b><i><a name="MIDDLEWARE">ACM/IFIP International Middleware Conference (Middleware)</a></i></b>
+<table border=0 cellpadding=3>
+<tr valign=top><td>2023</td>
+<td><b>EESMR: Energy efficient BFT-SMR for the masses</b>
+<br>A. Bhat, A. Bandarupalli, M. Nagaraj, S. Bagchi, A. Kate, and M. K. Reiter
 </td></tr>
 </table></p>
 
