--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -91,8 +91,13 @@ be reposted without the explicit permission of the copyright holder.
 <br>K. C. Wang and M. K. Reiter
 <br>In <i>Proceedings of the 31st ISOC Network and Distributed System Security Symposium</i>, February 2024.
 </li>
+
+<li><b><a name="2023">EESMR: Energy efficient BFT-SMR for the masses</a></b>
+<br>A. Bhat, A. Bandarupalli, M. Nagaraj, S. Bagchi, A. Kate, and M. K. Reiter  
+<br>In <i>Proceedings of the 24th ACM/IFIP International Middleware Conference</i>, December 2023.
+</li>
   
-<li><b><a name="2023">Distance-aware private set intersection</a></b>
+<li><b>Distance-aware private set intersection</b>
 <br>A. Chakraborti, G. Fanti, and M. K. Reiter
 <br>In <i>Proceedings of the 32nd USENIX Security Symposium</i>, August 2023.
 </li>
