Added CSF 2023 paper

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1057,8 +1057,8 @@ href="http://dx.doi.org/10.1007/11863908_19">doi:10.1007/11863908_19</a> &nbsp; 
 <p><b><i><a name="CSF">IEEE Computer Security Foundations (CSF)</a></i></b>
 <table border=0 cellpadding=3>
 <tr valign=top><td>2023</td>
-<td><b>Optimally hiding object sizes with constrained padding</b>
-<br>A. C. Reed and M. K. Reiter.
+<td><b><a href="./2023/CSF.pdf">Optimally hiding object sizes with constrained padding</a></b>
+<br>A. C. Reed and M. K. Reiter.  <font size="-1"><a href="https://dx.doi.org/10.1109/CSF57540.2023.00004">doi:10.1109/CSF57540.2023.00004</a></font>
 </td></tr>
 
 <tr valign=top><td>1997</td>
