--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -107,9 +107,9 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 32nd USENIX Security Symposium</i>, August 2023.
 </li>
 
-<li><b>Optimally hiding object sizes with constrained padding</b>
+<li><b><a href="./2023/CSF.pdf">Optimally hiding object sizes with constrained padding</a></b>
 <br>A. C. Reed and M. K. Reiter
-<br>In <i>Proceedings of the 36th IEEE Computer Security Foundations Symposium</i>, July 2023.
+<br>In <i>Proceedings of the 36th IEEE Computer Security Foundations Symposium</i>, July 2023.  <font size="-1"><a href="https://dx.doi.org/10.1109/CSF57540.2023.00004">doi:10.1109/CSF57540.2023.00004</a></font>
 </li>
 
 <li><b>Privately evaluating region overlaps with applications to collaborative sensor output validation</b>
