Added doi for Euro SP article

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1085,7 +1085,7 @@ version</a>.
 <tr valign=top><td>2023</td>
 <td><b>Privately evaluating region overlaps with applications to collaborative sensor output validation</b>
 <br>A. Chakraborti and M. K. Reiter.
-<font size="-1">&copy;IEEE</font>
+<font size="-1"><a href="https://dx.doi.org/10.1109/EuroSP57164.2023.00063">doi:10.1109/EuroSP57164.2023.00063</a> &nbsp; &copy;IEEE</font>
 </td></tr>
 </table></p>  
 
