--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -114,7 +114,7 @@ be reposted without the explicit permission of the copyright holder.
 
 <li><b>Privately evaluating region overlaps with applications to collaborative sensor output validation</b>
 <br>A. Chakraborti and M. K. Reiter
-<br>In <i>Proceedings of the 8th IEEE European Symposium on Security and Privacy</i>, July 2023.
+<br>In <i>Proceedings of the 8th IEEE European Symposium on Security and Privacy</i>, July 2023.  <font size="-1"><a href="https://dx.doi.org/10.1109/EuroSP57164.2023.00063">doi:10.1109/EuroSP57164.2023.00063</a></font>
 </li>
 
 <li><b><a href="./2023/INFOCOM.pdf">Nimble: Fast and safe migration of network functions</a></b>
