Added USENIX 2023 papers

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2297,12 +2297,12 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 <table border=0 cellpadding=3>
 
 <tr valign=top><td>2023</td>
-<td><b>Distance-aware private set intersection</b>
+<td><b><a href="./2023/USENIX1.pdf">Distance-aware private set intersection</a></b>
 <br>A. Chakraborti, G. Fanti, and M. K. Reiter.
 </td></tr>
 
 <tr valign=top><td></td>
-<td><b>Adversarial training for raw-binary malware classifiers</b>
+<td><b><a href="./2023/USENIX2.pdf">Adversarial training for raw-binary malware classifiers</a></b>
 <br>K. Lucas, S. Pai, W. Lin, L. Bauer, M. K. Reiter, and M. Sharif.
 </td></tr>
   
