--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -97,12 +97,12 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 24th ACM/IFIP International Middleware Conference</i>, December 2023.
 </li>
   
-<li><b>Distance-aware private set intersection</b>
+<li><b><a href="./2023/USENIX1.pdf">Distance-aware private set intersection</a></b>
 <br>A. Chakraborti, G. Fanti, and M. K. Reiter
 <br>In <i>Proceedings of the 32nd USENIX Security Symposium</i>, August 2023.
 </li>
 
-<li><b>Adversarial training for raw-binary malware classifiers</b>
+<li><b><a href="./2023/USENIX2.pdf">Adversarial training for raw-binary malware classifiers</a></b>
 <br>K. Lucas, S. Pai, W. Lin, L. Bauer, M. K. Reiter, and M. Sharif
 <br>In <i>Proceedings of the 32nd USENIX Security Symposium</i>, August 2023.
 </li>
