--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 	  </div>
 	  <div class="frame">
 	    <table>
-	      <tr><td style="text-align:center; padding:0 5px 0 5px"><a href="https://sakai.duke.edu/portal/site/9d7fb1eb-1aea-47c6-a584-7b4d68a79f56"><span class="fas fa-chalkboard-teacher fa-2x"></span></a></td></tr>
-	      <tr><td style="text-align:center">spr 2023</td></tr>
+	      <tr><td style="text-align:center; padding:0 5px 0 5px"><a href="https://sakai.duke.edu/portal/site/024eb2b8-b40b-4be6-b634-1ccbe0fe033e"><span class="fas fa-chalkboard-teacher fa-2x"></span></a></td></tr>
+	      <tr><td style="text-align:center">fall 2023</td></tr>
 	    </table>
 	  </div>
 	</td>
