Added Euro SP paper

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1083,7 +1083,7 @@ version</a>.
 <p><b><i><a name="EuroSandP">IEEE European Symposium on Security and Privacy (Euro S&amp;P)</a></i></b>
 <table border=0 cellpadding=3>
 <tr valign=top><td>2023</td>
-<td><b>Privately evaluating region overlaps with applications to collaborative sensor output validation</b>
+<td><b><a href="./2023/EuroSP.pdf">Privately evaluating region overlaps with applications to collaborative sensor output validation</a></b>
 <br>A. Chakraborti and M. K. Reiter.
 <font size="-1"><a href="https://dx.doi.org/10.1109/EuroSP57164.2023.00063">doi:10.1109/EuroSP57164.2023.00063</a> &nbsp; &copy;IEEE</font>
 </td></tr>
