--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -112,9 +112,9 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 36th IEEE Computer Security Foundations Symposium</i>, July 2023.  <font size="-1"><a href="https://dx.doi.org/10.1109/CSF57540.2023.00004">doi:10.1109/CSF57540.2023.00004</a></font>
 </li>
 
-<li><b>Privately evaluating region overlaps with applications to collaborative sensor output validation</b>
+<li><b><a href="./2023/EuroSP.pdf">Privately evaluating region overlaps with applications to collaborative sensor output validation</a></b>
 <br>A. Chakraborti and M. K. Reiter
-<br>In <i>Proceedings of the 8th IEEE European Symposium on Security and Privacy</i>, July 2023.  <font size="-1"><a href="https://dx.doi.org/10.1109/EuroSP57164.2023.00063">doi:10.1109/EuroSP57164.2023.00063</a></font>
+<br>In <i>Proceedings of the 8th IEEE European Symposium on Security and Privacy</i>, July 2023.  <font size="-1"><a href="https://dx.doi.org/10.1109/EuroSP57164.2023.00063">doi:10.1109/EuroSP57164.2023.00063</a> &nbsp; &copy;IEEE</font>
 </li>
 
 <li><b><a href="./2023/INFOCOM.pdf">Nimble: Fast and safe migration of network functions</a></b>
