--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -119,7 +119,7 @@ be reposted without the explicit permission of the copyright holder.
 
 <li><b><a href="./2023/INFOCOM.pdf">Nimble: Fast and safe migration of network functions</a></b>
 <br>S. Liu, M. K. Reiter, and T. A. Benson
-<br>In <i>Proceedings of the 42nd IEEE International Conference on Computer Communications</i>, May 2023.  <font size="-1">&copy;IEEE</font>
+<br>In <i>Proceedings of the 42nd IEEE International Conference on Computer Communications</i>, May 2023.  <font size="-1"><a href="https://dx.doi.org/10.1109/INFOCOM53939.2023.10228977">doi:10.1109/INFOCOM53939.2023.10228977</a> &nbsp; &copy;IEEE</font>
 </li>
 
 <li><b><a href="./2023/FC.pdf">The unique chain rule and its applications</a></b>
