Added NDSS 2024 paper

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2059,6 +2059,11 @@ System Security Symposium (NDSS)</a></i></b>
 <br>K. C. Wang and M. K. Reiter    
 </td></tr>
 
+<tr valign=top><td></td>
+<td><b>Group-based robustness: A general framework for customized robustness in the real world</b>
+<br>W. Lin, K. Lucas, N. Eyal, L. Bauer, M. K. Reiter, and M. Sharif
+</td></tr>
+
 <tr valign=top><td>2021</td>
 <td><b><a href="./2021/NDSS.pdf">TASE: Reducing latency of symbolic execution with transactional memory</a></b>
 <br>A. Humphries, K. Cating-Subramanian, and M. K. Reiter.
