--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -92,6 +92,11 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 31st ISOC Network and Distributed System Security Symposium</i>, February 2024.
 </li>
 
+<li><b>Group-based robustness: A general framework for customized robustness in the real world</b>
+<br>W. Lin, K. Lucas, N. Eyal, L. Bauer, M. K. Reiter, and M. Sharif
+<br>In <i>Proceedings of the 31st ISOC Network and Distributed System Security Symposium</i>, February 2024.
+</li>
+
 <li><b><a name="2023">EESMR: Energy efficient BFT-SMR for the masses</a></b>
 <br>A. Bhat, A. Bandarupalli, M. Nagaraj, S. Bagchi, A. Kate, and M. K. Reiter  
 <br>In <i>Proceedings of the 24th ACM/IFIP International Middleware Conference</i>, December 2023.
