--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -59,6 +59,7 @@ be reposted without the explicit permission of the copyright holder.
 <td><font size="-1">
 <a href="#AAAI">AAAI</a>      
 <br><a href="#ACNS">ACNS</a>
+<br><a href="#ACSAC">ACSAC</a>
 <br><a href="#ANCS">ANCS</a>
 <br><a href="#ASIACCS">ASIACCS</a>
 <br><a href="#ASPLOS">ASPLOS</a>
@@ -836,6 +837,16 @@ with applications to anonymous communication</a></a></b>
 <br>L. Kissner, A. Oprea, M. K. Reiter, D. Song and K. Yang.
 Lecture Notes in Computer Science 3089, pages 16&#8211;30.
 <font size="-1">&nbsp; &copy;Springer</font>
+</td></tr>
+</table></p>
+
+<hr>
+
+<p><b><i><a name="ACSAC">Annual Computer Security Applications Conference (ACSAC)</a></i></b>
+<table border=0 cellpadding=3>
+<tr valign=top><td>2023</td>
+<td><b>Prioritizing remediation of enterprise hosts by malware execution risk</b>
+<br>A. Chi, B. Anderson, and M. K. Reiter
 </td></tr>
 </table></p>
 
