--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -101,6 +101,11 @@ be reposted without the explicit permission of the copyright holder.
 <br>A. Bhat, A. Bandarupalli, M. Nagaraj, S. Bagchi, A. Kate, and M. K. Reiter  
 <br>In <i>Proceedings of the 24th ACM/IFIP International Middleware Conference</i>, December 2023.
 </li>
+
+<li><b>Prioritizing remediation of enterprise hosts by malware execution risk</b>
+<br>A. Chi, B. Anderson, and M. K. Reiter
+<br>In <i>Proceedings of the 39th Annual Computer Security Applications Conference</i>, December 2023.
+</li>
   
 <li><b><a href="./2023/USENIX1.pdf">Distance-aware private set intersection</a></b>
 <br>A. Chakraborti, G. Fanti, and M. K. Reiter
