Added USENIX Security 2024 paper

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2312,6 +2312,11 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 <p><b><i><a name="USENIX_Security">USENIX Security Symposium</a></i></b>
 <table border=0 cellpadding=3>
 
+<tr valign=top><td>2024</td>
+<td><b>Mudjacking: Patching backdoor vulnerabilities in foundation models</b>
+<br>H. Liu, M. K. Reiter, and N. Gong.
+</td></td>
+  
 <tr valign=top><td>2023</td>
 <td><b><a href="./2023/USENIX1.pdf">Distance-aware private set intersection</a></b>
 <br>A. Chakraborti, G. Fanti, and M. K. Reiter.
