--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -87,7 +87,12 @@ be reposted without the explicit permission of the copyright holder.
 <hr>
 
 <ul>
-<li><b><a name="2024">Bernoulli honeywords</a></b>
+<li><b><a name="2024">Mudjacking: Patching backdoor vulnerabilities in foundation models</a></b>
+<br>H. Liu, M. K. Reiter, and N. Gong
+<br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.
+</li>
+  
+<li><b>Bernoulli honeywords</b>
 <br>K. C. Wang and M. K. Reiter
 <br>In <i>Proceedings of the 31st ISOC Network and Distributed System Security Symposium</i>, February 2024.
 </li>
