--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -102,14 +102,14 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 31st ISOC Network and Distributed System Security Symposium</i>, February 2024.
 </li>
 
-<li><b><a name="2023">EESMR: Energy efficient BFT-SMR for the masses</a></b>
+<li><b><a name="2023"><a href="./2023/Middleware.pdf">EESMR: Energy efficient BFT-SMR for the masses</a></a></b>
 <br>A. Bhat, A. Bandarupalli, M. Nagaraj, S. Bagchi, A. Kate, and M. K. Reiter  
-<br>In <i>Proceedings of the 24th ACM/IFIP International Middleware Conference</i>, December 2023.
+<br>In <i>Proceedings of the 24th ACM/IFIP International Middleware Conference</i>, December 2023.  <font size="-1"><a href="https://doi.org/10.1145/3590140.3592848">doi:10.1145/3590140.3592848</a></font>
 </li>
 
-<li><b>Prioritizing remediation of enterprise hosts by malware execution risk</b>
+<li><b><a href="./2023/ACSAC.pdf">Prioritizing remediation of enterprise hosts by malware execution risk</a></b>
 <br>A. Chi, B. Anderson, and M. K. Reiter
-<br>In <i>Proceedings of the 39th Annual Computer Security Applications Conference</i>, December 2023.
+<br>In <i>Proceedings of the 39th Annual Computer Security Applications Conference</i>, December 2023.  <font size="-1"><a href="https://doi.org/10.1145/3627106.3627180">doi:10.1145/3627106.3627180</a></font>
 </li>
   
 <li><b><a href="./2023/USENIX1.pdf">Distance-aware private set intersection</a></b>
