Added NDSS 2024 papers

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2068,13 +2068,13 @@ a minimalist approach for network flow monitoring</a></b>
 System Security Symposium (NDSS)</a></i></b>
 <table border=0 cellpadding=3>
 <tr valign=top><td>2024</td>
-<td><b>Bernoulli honeywords</b>
-<br>K. C. Wang and M. K. Reiter    
+<td><b><a href="./2024/NDSS2.pdf">Bernoulli honeywords</a></b>
+  <br>K. C. Wang and M. K. Reiter.  <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2024.23295">doi:10.14722/ndss.2024.23295</a></font>
 </td></tr>
 
 <tr valign=top><td></td>
-<td><b>Group-based robustness: A general framework for customized robustness in the real world</b>
-<br>W. Lin, K. Lucas, N. Eyal, L. Bauer, M. K. Reiter, and M. Sharif
+<td><b><a href="./2024/NDSS1.pdf">Group-based robustness: A general framework for customized robustness in the real world</a></b>
+<br>W. Lin, K. Lucas, N. Eyal, L. Bauer, M. K. Reiter, and M. Sharif.  <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2024.24084">doi:10.14722/ndss.2024.24084</a></font>
 </td></tr>
 
 <tr valign=top><td>2021</td>
