--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -92,14 +92,14 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.
 </li>
   
-<li><b>Bernoulli honeywords</b>
+<li><b><a href="./2024/NDSS2.pdf">Bernoulli honeywords</a></b>
 <br>K. C. Wang and M. K. Reiter
-<br>In <i>Proceedings of the 31st ISOC Network and Distributed System Security Symposium</i>, February 2024.
+<br>In <i>Proceedings of the 31st ISOC Network and Distributed System Security Symposium</i>, February 2024.  <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2024.23295">doi:10.14722/ndss.2024.23295</a></font>
 </li>
 
-<li><b>Group-based robustness: A general framework for customized robustness in the real world</b>
+<li><b><a href="./2024/NDSS1.pdf">Group-based robustness: A general framework for customized robustness in the real world</a></b>
 <br>W. Lin, K. Lucas, N. Eyal, L. Bauer, M. K. Reiter, and M. Sharif
-<br>In <i>Proceedings of the 31st ISOC Network and Distributed System Security Symposium</i>, February 2024.
+<br>In <i>Proceedings of the 31st ISOC Network and Distributed System Security Symposium</i>, February 2024.  <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2024.24084">doi:10.14722/ndss.2024.24084</a></font>
 </li>
 
 <li><b><a name="2023"><a href="./2023/Middleware.pdf">EESMR: Energy efficient BFT-SMR for the masses</a></a></b>
