Added Andrew Chi

--- a/students.html
+++ b/students.html
@@ -63,6 +63,9 @@ The following students have completed a Ph.D. under my supervision.
 <li><a href="https://www.linkedin.com/pub/darrell-bethea/103/a06/158">Darrell Bethea</a>, Ph.D., 2015.
 <br>Thesis: <i><a href="https://doi.org/10.17615/rh2k-q093">WACCO and LOKO: Strong Consistency at Global Scale</a></i>
 </li>
+<li><a href="https://www.linkedin.com/in/andrew-chi-burger/">Andrew Chi</a>, Ph.D., 2023.
+<br>Thesis: <i><a href="https://doi.org/10.17615/0316-8395">Verifying the Behavior of Security-Impacting Programs</a></i>
+</li>
 <li><a href="https://www.linkedin.com/in/robertacochran">Robby Cochran</a>, Ph.D., 2016.
 <br>Thesis: <i><a href="https://doi.org/10.17615/2pdv-3313">Symbolic Verification of Remote Client Behavior in Distributed Systems</a></i>
 </li>
