Updates to pubs lists

--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -91,7 +91,12 @@ be reposted without the explicit permission of the copyright holder.
 <br>H. Liu, M. K. Reiter, and N. Gong
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.
 </li>
-  
+
+<li><b>The impact of exposed passwords on honeyword efficacy</b>
+<br>Z. Huang, L. Bauer, and M. K. Reiter
+<br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.  
+</li>
+
 <li><b><a href="./2024/NDSS2.pdf">Bernoulli honeywords</a></b>
 <br>K. C. Wang and M. K. Reiter
 <br>In <i>Proceedings of the 31st ISOC Network and Distributed System Security Symposium</i>, February 2024.  <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2024.23295">doi:10.14722/ndss.2024.23295</a></font>
