--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2317,7 +2317,12 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 <tr valign=top><td>2024</td>
 <td><b>Mudjacking: Patching backdoor vulnerabilities in foundation models</b>
 <br>H. Liu, M. K. Reiter, and N. Gong.
-</td></td>
+</td></tr>
+
+<tr valign=top><td></td>
+<td><b>The impact of exposed passwords on honeyword efficacy</b>
+<br>Z. Huang, L. Bauer, and M. K. Reiter.
+</td></tr>
   
 <tr valign=top><td>2023</td>
 <td><b><a href="./2023/USENIX1.pdf">Distance-aware private set intersection</a></b>
