Added info for group-based robustness paper

--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -105,6 +105,7 @@ be reposted without the explicit permission of the copyright holder.
 <li><b><a href="./2024/NDSS1.pdf">Group-based robustness: A general framework for customized robustness in the real world</a></b>
 <br>W. Lin, K. Lucas, N. Eyal, L. Bauer, M. K. Reiter, and M. Sharif
 <br>In <i>Proceedings of the 31st ISOC Network and Distributed System Security Symposium</i>, February 2024.  <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2024.24084">doi:10.14722/ndss.2024.24084</a></font>
+<br>Notes: The <a href="https://www.youtube.com/watch?v=tDZHDdsVH4I&ab_channel=NDSSSymposium">conference talk</a> and <a href="https://github.com/linweiran/GBR">implementation</a> are available.
 </li>
 
 <li><b><a name="2023"><a href="./2023/Middleware.pdf">EESMR: Energy efficient BFT-SMR for the masses</a></a></b>
