--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2075,6 +2075,8 @@ System Security Symposium (NDSS)</a></i></b>
 <tr valign=top><td></td>
 <td><b><a href="./2024/NDSS1.pdf">Group-based robustness: A general framework for customized robustness in the real world</a></b>
 <br>W. Lin, K. Lucas, N. Eyal, L. Bauer, M. K. Reiter, and M. Sharif.  <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2024.24084">doi:10.14722/ndss.2024.24084</a></font>
+<br>Notes: The <a href="https://www.youtube.com/watch?v=tDZHDdsVH4I&ab_channel=NDSSSymposium">conference talk</a> and <a href="https://github.com/linweiran/GBR">implementation</a> are available.
+
 </td></tr>
 
 <tr valign=top><td>2021</td>
