Added additional info links

--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -105,7 +105,7 @@ be reposted without the explicit permission of the copyright holder.
 <li><b><a href="./2024/NDSS1.pdf">Group-based robustness: A general framework for customized robustness in the real world</a></b>
 <br>W. Lin, K. Lucas, N. Eyal, L. Bauer, M. K. Reiter, and M. Sharif
 <br>In <i>Proceedings of the 31st ISOC Network and Distributed System Security Symposium</i>, February 2024.  <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2024.24084">doi:10.14722/ndss.2024.24084</a></font>
-<br>Notes: The <a href="https://www.youtube.com/watch?v=tDZHDdsVH4I&ab_channel=NDSSSymposium">conference talk</a> and <a href="https://github.com/linweiran/GBR">implementation</a> are available.
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=tDZHDdsVH4I&ab_channel=NDSSSymposium">conference talk</a> &nbsp; <a href="https://github.com/linweiran/GBR">implementation</a>
 </li>
 
 <li><b><a name="2023"><a href="./2023/Middleware.pdf">EESMR: Energy efficient BFT-SMR for the masses</a></a></b>
@@ -222,7 +222,7 @@ and Privacy</i>, April 2021.
 <br>A. Humphries, K. Cating-Subramanian, and M. K. Reiter
 <br>In <i>Proceedings of the 28th ISOC Network and Distributed System Security Symposium</i>, February 2021.
 <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2021.24327">doi:10.14722/ndss.2021.24327</a></font>
-<br>Notes: An <a href="https://github.com/adamhumphriescs/TASE_Release">example implementation</a> is available.
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=u4NxkhgBGxQ">conference talk</a> &nbsp; <a href="https://github.com/adamhumphriescs/TASE_Release">implementation</a>
 
 </li>
 
