--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2075,14 +2075,14 @@ System Security Symposium (NDSS)</a></i></b>
 <tr valign=top><td></td>
 <td><b><a href="./2024/NDSS1.pdf">Group-based robustness: A general framework for customized robustness in the real world</a></b>
 <br>W. Lin, K. Lucas, N. Eyal, L. Bauer, M. K. Reiter, and M. Sharif.  <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2024.24084">doi:10.14722/ndss.2024.24084</a></font>
-<br>Notes: The <a href="https://www.youtube.com/watch?v=tDZHDdsVH4I&ab_channel=NDSSSymposium">conference talk</a> and <a href="https://github.com/linweiran/GBR">implementation</a> are available.
-
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=tDZHDdsVH4I&ab_channel=NDSSSymposium">conference talk</a> &nbsp; <a href="https://github.com/linweiran/GBR">implementation</a>
 </td></tr>
 
 <tr valign=top><td>2021</td>
 <td><b><a href="./2021/NDSS.pdf">TASE: Reducing latency of symbolic execution with transactional memory</a></b>
 <br>A. Humphries, K. Cating-Subramanian, and M. K. Reiter.
 <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2021.24327">doi:10.14722/ndss.2021.24327</a></font>
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=u4NxkhgBGxQ">conference talk</a> &nbsp; <a href="https://github.com/adamhumphriescs/TASE_Release">implementation</a>
 </td></tr>
 
 <tr valign=top><td>2019</td>
