Added talk links

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2089,6 +2089,7 @@ System Security Symposium (NDSS)</a></i></b>
 <td><b><a href="./2019/NDSS1.pdf">How to end password reuse on the web</a></b>
 <br>K. C. Wang and M. K. Reiter.
 <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2019.23360">doi:10.14722/ndss.2019.23360</a></font>
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=qThl6Iu_xnM">conference talk</a>
 </td></tr>  
 
 <tr valign=top><td></td>
@@ -2349,6 +2350,7 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 <tr valign=top><td>2020</td>
 <td><b><a href="./2020/USENIX.pdf">Detecting stuffing of a user's credentials at her own accounts</a></b>
 <br>K. C. Wang and M. K. Reiter.  Pages 2201&#8211;2218.
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=9Vsc_ntEU3I">conference talk</a>
 </td></tr>  
   
 <tr valign=top><td>2016</td>
