--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -229,6 +229,7 @@ and Privacy</i>, April 2021.
 <li><b><a name="2020"><a href="./2020/USENIX.pdf">Detecting stuffing of a user’s credentials at her own accounts</a></a></b>
 <br>K. C. Wang and M. K. Reiter
 <br>In <i>Proceedings of the 29th USENIX Security Symposium</i>, pages 2201&#8211;2218, August 2020.
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=9Vsc_ntEU3I">conference talk</a>
 </li>
 
 <li><b><a href="./2020/ICML.pdf">Defense through diverse directions</a></b>
@@ -286,6 +287,7 @@ Conference on Computer Systems</i>, March 2019.
 <br>K. C. Wang and M. K. Reiter
 <br>In <i>Proceedings of the 26th ISOC Network and Distributed System Security Symposium</i>, February 2019.
 <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2019.23360">doi:10.14722/ndss.2019.23360</a></font>
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=qThl6Iu_xnM">conference talk</a>
 </li>
   
 <li><b><a href="./2019/NDSS2.pdf">Statistical privacy for streaming traffic</a></b>
