Added ICDCS 2024 paper

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2330,21 +2330,25 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 <tr valign=top><td>2023</td>
 <td><b><a href="./2023/USENIX1.pdf">Distance-aware private set intersection</a></b>
 <br>A. Chakraborti, G. Fanti, and M. K. Reiter.
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=kwjf_fFyMpM">conference talk</a>
 </td></tr>
 
 <tr valign=top><td></td>
 <td><b><a href="./2023/USENIX2.pdf">Adversarial training for raw-binary malware classifiers</a></b>
 <br>K. Lucas, S. Pai, W. Lin, L. Bauer, M. K. Reiter, and M. Sharif.
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=-_9olqD4HEI">conference talk</a>
 </td></tr>
   
 <tr valign=top><td>2021</td>
 <td><b><a href="./2021/USENIX1.pdf">Using Amnesia to detect credential database breaches</a></b>
 <br>K. C. Wang and M. K. Reiter.
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=lAakj5Lx0Ic">conference talk</a>
 </td></tr>
 
 <tr valign=top><td></td>
 <td><b><a href="./2021/USENIX2.pdf">Effect of mood, location, trust, and presence of others on video-based social authentication</a></b>
 <br>C. Guo, B. Campbell, A. Kapadia, M. K. Reiter, and K. Caine.
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=ej44s2LUeeI">conference talk</a>
 </td></tr>
   
 <tr valign=top><td>2020</td>
