--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -121,11 +121,13 @@ be reposted without the explicit permission of the copyright holder.
 <li><b><a href="./2023/USENIX1.pdf">Distance-aware private set intersection</a></b>
 <br>A. Chakraborti, G. Fanti, and M. K. Reiter
 <br>In <i>Proceedings of the 32nd USENIX Security Symposium</i>, August 2023.
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=kwjf_fFyMpM">conference talk</a>
 </li>
 
 <li><b><a href="./2023/USENIX2.pdf">Adversarial training for raw-binary malware classifiers</a></b>
 <br>K. Lucas, S. Pai, W. Lin, L. Bauer, M. K. Reiter, and M. Sharif
 <br>In <i>Proceedings of the 32nd USENIX Security Symposium</i>, August 2023.
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=-_9olqD4HEI">conference talk</a>
 </li>
 
 <li><b><a href="./2023/CSF.pdf">Optimally hiding object sizes with constrained padding</a></b>
@@ -197,11 +199,13 @@ BFT using small trusted hardware to tolerate minority corruption</a></b>
 <li><b><a href="./2021/USENIX1.pdf">Using Amnesia to detect credential database breaches</a></b>
 <br>K. C. Wang and M. K. Reiter
 <br>In <i>Proceedings of the 30th USENIX Security Symposium</i>, August 2021.
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=lAakj5Lx0Ic">conference talk</a>
 </li>
 
 <li><b><a href="./2021/USENIX2.pdf">Effect of mood, location, trust, and presence of others on video-based social authentication</a></b>
 <br>C. Guo, B. Campbell, A. Kapadia, M. K. Reiter, and K. Caine
 <br>In <i>Proceedings of the 30th USENIX Security Symposium</i>, August 2021.
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=ej44s2LUeeI">conference talk</a>
 </li>
 
 <li><b><a href="./2021/ASIACCS.pdf">Malware makeover: Breaking ML-based static analysis by modifying executable bytes</a></b>
