A bit more cleanup

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2096,8 +2096,7 @@ System Security Symposium (NDSS)</a></i></b>
 <td><b><a href="./2019/NDSS2.pdf">Statistical privacy for streaming traffic</a></b>
 <br>X. Zhang, J. Hamm, M. K. Reiter, and Y. Zhang.
 <font size=-1><a href="https://dx.doi.org/10.14722/ndss.2019.23210">doi:10.14722/ndss.2019.23210</a></font>
-<br>Note: This paper is superceded by <a href="#2022/IJIS">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=LnIunEKXqh0">conference talk</a> &nbsp; <a href="#2022/IJIS">journal version</a>
 </td></tr>  
 
 <tr valign=top><td>2013</td>
