--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -298,13 +298,12 @@ Conference on Computer Systems</i>, March 2019.
 <br>X. Zhang, J. Hamm, M. K. Reiter, and Y. Zhang
 <br>In <i>Proceedings of the 26th ISOC Network and Distributed System Security Symposium</i>, February 2019.  
 <font size=-1><a href="https://dx.doi.org/10.14722/ndss.2019.23210">doi:10.14722/ndss.2019.23210</a></font>    
-<br>Note: This paper is superceded by <a href="#2022/IJIS">the
-journal version</a>.
+<br>Additional information: &nbsp; <a href="https://www.youtube.com/watch?v=LnIunEKXqh0">conference talk</a> &nbsp; <a href="#2022/IJIS">journal version</a>
 </li>
 
 <li><b><a name="2018"><a href="./2018/CoNEXT.pdf">Intent-driven composition of resource-management SDN applications</a></a></b>
 <br>V. Heorhiadi, S. Chandrasekaran, M. K. Reiter, and V. Sekar
-<br>In <i>Proceedings of the 14th International Conference on emerging Networking EXperiments and Technologies</i>, pages 86&#8211;97, December 2018.
+<br>In <i>Proceedings of the 14th International Conference on Emerging Networking Experiments and Technologies</i>, pages 86&#8211;97, December 2018.
 <font size="-1"><a href="https://doi.org/10.1145/3281411.3281431">doi:10.1145/3281411.3281431</a> &nbsp; &copy;ACM</font>
 </li>
 
